SemanticAnalyzer/tests/success/clase_simple.java
class A {
	var Pila p;
	
	A (char c) {
	}

	dynamic boolean equals(String s) {
	}
}

class B extends A {
	B (boolean b, int a) {
		
	}

	static void main() {
	
	}
	
}

class Pila {
	Pila ()
	{
	}
}
